; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_hevc.c_dxva2_hevc_decode_slice.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_hevc.c_dxva2_hevc_decode_slice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.hevc_dxva2_picture_context* }
%struct.hevc_dxva2_picture_context = type { i64, i32*, i32*, i32 }

@MAX_SLICES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i32)* @dxva2_hevc_decode_slice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dxva2_hevc_decode_slice(%struct.TYPE_7__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca %struct.hevc_dxva2_picture_context*, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %8, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %9, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %19, align 8
  store %struct.hevc_dxva2_picture_context* %20, %struct.hevc_dxva2_picture_context** %10, align 8
  %21 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %22 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @MAX_SLICES, align 8
  %25 = icmp uge i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %65

27:                                               ; preds = %3
  %28 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %29 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %28, i32 0, i32 2
  %30 = load i32*, i32** %29, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %36, label %32

32:                                               ; preds = %27
  %33 = load i32*, i32** %6, align 8
  %34 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %35 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %34, i32 0, i32 2
  store i32* %33, i32** %35, align 8
  br label %36

36:                                               ; preds = %32, %27
  %37 = load i32, i32* %7, align 4
  %38 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %39 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %38, i32 0, i32 3
  %40 = load i32, i32* %39, align 8
  %41 = add nsw i32 %40, %37
  store i32 %41, i32* %39, align 8
  %42 = load i32*, i32** %6, align 8
  %43 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %44 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %43, i32 0, i32 2
  %45 = load i32*, i32** %44, align 8
  %46 = ptrtoint i32* %42 to i64
  %47 = ptrtoint i32* %45 to i64
  %48 = sub i64 %46, %47
  %49 = sdiv exact i64 %48, 4
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* %11, align 4
  %51 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %52 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %51, i32 0, i32 1
  %53 = load i32*, i32** %52, align 8
  %54 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %55 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = getelementptr inbounds i32, i32* %53, i64 %56
  %58 = load i32, i32* %11, align 4
  %59 = load i32, i32* %7, align 4
  %60 = call i32 @fill_slice_short(i32* %57, i32 %58, i32 %59)
  %61 = load %struct.hevc_dxva2_picture_context*, %struct.hevc_dxva2_picture_context** %10, align 8
  %62 = getelementptr inbounds %struct.hevc_dxva2_picture_context, %struct.hevc_dxva2_picture_context* %61, i32 0, i32 0
  %63 = load i64, i64* %62, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %62, align 8
  store i32 0, i32* %4, align 4
  br label %65

65:                                               ; preds = %36, %26
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local i32 @fill_slice_short(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
